[package]
name = "tygres"
version = "0.1.0"
authors = ["Rajsekar Manokaran <rajsekar@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
tokio = {version = "0.1.11", features = ["async-await-preview"]}
tokio-async-await = "0.1.4"
tygres-macros = {path = "../tygres-macros"}
tokio-postgres = {path = "../rust-postgres/tokio-postgres"}
postgres = {path = "../rust-postgres/postgres"}
